EndPoint moved into "default.properties" in "env" folder "pages" package moved into "main" directory

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -18,3 +18,13 @@ logs_directory = logs
 # specify the level at which the objects should be cleared
 # Possible values are suite, spec and scenario. Default value is suite.
 gauge_clear_state_level = scenario
+
+
+
+# The below properties will be used in AndroidSetup class to initialize Appium Server and Android Version
+appium_host = 127.0.0.1
+appium_port = 4723
+android_version = 5.1.0
+
+# This is the endpoint of the Web Application which used to do the test automation
+APP_ENDPOINT = https://www.gridlastic.com/
