Added a DriverSetup Class for executing tests in multiple OS (Windows, Android) and multiple browser stacks (Chrome, Firefox, IE).

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -19,9 +19,12 @@ logs_directory = logs
 # Possible values are suite, spec and scenario. Default value is suite.
 gauge_clear_state_level = scenario
 
+# The below properties will be used in DriverSetup class to initialize the OS and the Browser where you need to run
+# your Web Application
+OPERATING_SYSTEM = android
+BROWSER = chrome
 
-
-# The below properties will be used in AndroidSetup class to initialize Appium Server and Android Version
+# The below properties will be used in DriverSetup class to initialize Appium Server and Android Version
 appium_host = 127.0.0.1
 appium_port = 4723
 android_version = 5.1.0
